--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -916,16 +916,16 @@
 
     @if (Model.Id == 15)
     {
-<div class="div-text">
-    Start price from $36 080
-    <br />
-    Thanks to the new design and almost completely updated body,
-    the Audi A4 sports features have become even more expressive:
-    in its appearance the dynamics and power are combined with the aesthetics that appeal.
-    The high-quality and high-tech interior, the latest technologies in digital equipment,
-    the Infotainment infotainment and command and assistance systems harmoniously complement
-    the overall impression.
-</div>
+        <div class="div-text">
+            Start price from $36 080
+            <br />
+            Thanks to the new design and almost completely updated body,
+            the Audi A4 sports features have become even more expressive:
+            in its appearance the dynamics and power are combined with the aesthetics that appeal.
+            The high-quality and high-tech interior, the latest technologies in digital equipment,
+            the Infotainment infotainment and command and assistance systems harmoniously complement
+            the overall impression.
+        </div>
 
         <br />
         <img class="img-audi-wide" src="~/App_Images/audi-A-4-view-1.jpg" alt="A4-view-1" />
@@ -933,13 +933,13 @@
         <div>
             <hr />
             <div class="div-text">
-                The Audi A4 Limousine is the embodiment of sportiness, emotion and prestige. 
+                The Audi A4 Limousine is the embodiment of sportiness, emotion and prestige.
                 This is noticeable in every detail:
                 in the dynamic body elements that indicate the use of the quattro drive,
                 and in harmonious proportions. The solid chrome trim combines
-                the LED taillights and clearly emphasizes the horizontal lines of the body. 
+                the LED taillights and clearly emphasizes the horizontal lines of the body.
                 A relief diffuser with built-in trapezoidal tailpipes gives a sporty look to the rear.
-                On the side, the Audi A4 Limousine sports body lines are extended by wide wings and clear sills. 
+                On the side, the Audi A4 Limousine sports body lines are extended by wide wings and clear sills.
                 A large selection of wheels, partly as an option, is available in sizes from 16 to 19 inches.
                 The wide recessed grille of the Singleframe radiator,
                 the front bumper and framed wide air intakes emphasize the integrity and power of the front.
@@ -961,8 +961,8 @@
                 The large storage compartment in the center console is very convenient.
                 Standard interior lighting includes a reading lamp with touch-adjustable brightness.
                 An optional backlight package creates an even more cozy atmosphere in the cabin.
-                A feature of the Audi A4 Limousine is our modular line concept. 
-                Thanks to it, the configuration of the car has become more flexible - 
+                A feature of the Audi A4 Limousine is our modular line concept.
+                Thanks to it, the configuration of the car has become more flexible -
                 you can now combine different design packages for the interior and exterior.
             </div>
             <br />
@@ -984,6 +984,124 @@
             <span class="span">3/3</span>
             <a href="/Config/Details/51">
                 <img class="audi-config-img" src="~/App_Images/audi-A-4-cfg-premium.png" alt="A4-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*RENAULT KANGOO ZE*@
+    @*/////////////*@
+
+    @if (Model.Id == 16)
+    {
+        <div class="div-text">
+            Start price from $34 870
+            <br />
+            KANGOO Z.E. Specially designed for all your business needs. The Renault logo,
+            proudly positioned on the distinctive and solid front of the car,
+            cleverly conceals the electrical charging connector.
+        </div>
+
+        <br>
+        <img class="img-renault" src="~/App_Images/renault-kangoo-ze-view-1.jpg" alt="kangooze view" />
+        <hr />
+        <div class="div-text">
+            With our new battery Z.E. 33 new KANGOO Z.E.
+            will allow you to overcome up to 270 km in the NEDC * cycle and up
+            to 200 km in real conditions without charging the battery and increasing the size.
+            This is a new record!
+        </div>
+        <img class="img-renault" src="~/App_Images/renault-kangoo-ze-view-2.jpg" alt="kangooze view 2" />
+        <hr />
+        <div>
+            <h2>Interior design</h2>
+            <img class="img-renault" src="~/App_Images/renault-kangoo-ze-inside-1.jpg" alt="kangooze inside 1" />
+            <hr />
+            Enjoy personalized layout,
+            an ergonomic dashboard and the harmoniously integrated
+            R-LINK Evolution * multimedia system in your vehicle cabin.
+            <div class="div-text">
+
+            </div>
+
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/53">
+                <img class="renault-config-img" src="~/App_Images/renault-kangoo-ze-cfg-express.jpg" alt="kangooze-configs-express-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/54">
+                <img class="renault-config-img" src="~/App_Images/renault-kangoo-ze-cfg-maxi.jpg" alt="kangooze-configs-maxi-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/55">
+                <img class="renault-config-img" src="~/App_Images/renault-kangoo-ze-cfg-maxi-pass.jpg" alt="loganmcv-configs-maxi-pass-img" />
+            </a>
+        </div>
+        <hr />
+    }
+
+    @*AUDI E-Tron*@
+    @*/////////////*@
+
+    @if (Model.Id == 17)
+    {
+<div class="div-text">
+    Start price from $71 230
+    <br />
+    This is your chance: Immerse yourself with the Audi e-tron in the 
+    exciting world of electric mobility to become a part of the future.
+    Our first fully electric SUV is your sporty and reliable companion on the road to new times.
+
+</div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-e-tron-view-1.jpg" alt="E-tron-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                The car's electric motor is capable of producing 
+                a peak power of 265 kW in 60 seconds.
+                The front motor, which saves space parallel to the axle, 
+                develops peak power of 125 kW and torque of 247 Nm. 
+                The coaxial rear engine delivers 140 kW and has a torque of 314 Nm. 
+                Transmission of axial traction through differentials is ensured by 2-speed 
+                single-gear planetary gearboxes.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-e-tron-view-2.jpg" alt="e-tron-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                Experience with the Audi e-tron the benefits of 
+                an innovative electric car and a modern SUV. 
+                The car interior is spacious and well equipped. 
+                Both you and the other four passengers will enjoy the ride with plenty
+                of head and legroom. A total luggage compartment volume of 660 
+                liters makes it easy to travel on an Audi e-tron with your luggage on vacation.
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-e-tron-inside-1.jpeg" alt="e-tron-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/1</span>
+            <a href="/Config/Details/56">
+                <img class="audi-e-tron-config-img"  src="~/App_Images/audi-e-tron-cfg-e-tron.png" alt="e-tron-configs-base-img" />
             </a>
             <hr />
         </div>
