--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -97,6 +97,14 @@
                             {
                                 <img class="audi-small-icon" src="~/App_Images/audi-A-4-small-icon.png" alt="A4-small-icon" />
                             }
+                            @if (item.Id == 16)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-kangoo-ze-small-icon.jpg" alt="kangooze-small-icon" />
+                            }
+                            @if (item.Id == 17)
+                            {
+                                <img class="audi-e-tron-small-icon" src="~/App_Images/audi-e-tron-small-icon.png.jpg" alt="e-tron-small-icon" />
+                            }
                         </a>
                     </td>
                 </tr>
