--- a/CarStore/Views/CarType/Index.cshtml
+++ b/CarStore/Views/CarType/Index.cshtml
@@ -38,6 +38,10 @@
                         {
                             <img src="~/App_Images/comercial-small-img.jpg" alt="Commercial-img" />
                         }
+                        @if (item.Id == 4)
+                        {
+                            <img src="~/App_Images/electric-small-img.jpg" alt="electric-img" />
+                        }
                     </a>
                 </td>
 
