--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -41,10 +41,13 @@
     @if (Model.Id == 1)
     {
 
-        <div class="div-text">
-            Start price from $15 070
-            <br />
-        </div>
+<div class="div-text">
+    Start price from $15 070
+    <br />
+    This attractive all-new Renault MEGANE Sedan will not leave you indifferent.
+    Expressive, personable and ambitious, the Megane sedan embodies the energy of the modern city. 
+    It has a distinctive style: active and yet elegant.
+</div>
         <br>
         <img class="img-renault" src="~/App_Images/renault-megane-view.jpg" alt="Megan view" />
 
